Added Important Classes and some Structure
Added all or most of the important classes for the game with
some implementation of methods and properties. Will need to
add a resources folder for the room and hazard text files.