@@ -1,1 +1,5 @@
 # TextAdventuregame
+
+Eclipse
+--module-path "${eclipse_home}/javafx-sdk/lib"
+--add-modules javafx.controls,javafx.fxml
